<resources>
    <!--FACEBOOK ID-->
    <string name="facebook_app_id">829824353738031</string>

    <!--APP NAME-->
    <string name="app_name">En Concierto</string>

    <!--GENERAL-->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_accept">Aceptar</string>
    <string name="text_cancel">Cancelar</string>

    <!--ACTIVITY LABELS-->
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_user_session">UserSessionActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_terms">Términos y condiciones</string>
    <string name="title_activity_questionary">QuestionaryActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <!--ERROR MESSAGES-->
    <string name="error_input_empty">Este campo es obligatorio</string>
    <string name="error_mail_incorrect">Correo incorrecto</string>
    <string name="error_terms">Tienes que aceptar los términos y condiciones</string>
    <string name="error_no_connection">No hay conexión a la red</string>
    <string name="error_nouser">No hay usuarios registrados con este correo</string>
    <string name="error_existieng_user">El correo ya se encuentra registrado</string>
    <string name="error_no_answer">Debes seleccionar una respuesta</string>

    <!--USER SESSION ACTIVITY-->
    <string name="button_register">Registro</string>
    <string name="button_login">Iniciar Sesión</string>
    <string name="button_facebook">Ingresar con Facebook</string>

    <!--LOGIN ACTIVITY-->
    <string name="hint_email">Para ingresar escribe tu correo</string>

    <!--REGISTER ACTIVITY-->
    <string name="input_emanil">Tu Correo</string>
    <string name="input_cel">Tu Número</string>
    <string name="ingresar">Ingresar</string>
    <string name="link_terms">Para continuar con esta accion, es necesario aceptar <u>Términos y condiciones</u>\ne introducir tu numero de telefono</string>
    <string name="link_terms_register">Aceptar <u>Términos y condiciones</u></string>


    <!--QESTIONARY ACTIVITY-->
    <string name="button_send_answer">Enviar</string>
    <string name="pregunta_uno">¿Cual es la posición de tú boleta?</string>
    <string-array name="respuestas_uno">
        <item>Platino</item>
        <item>VIP</item>
        <item>Zona 40</item>
    </string-array>

    <string name="pregunta_dos">¿Cual artista te gutaría conocer?</string>
    <string-array name="respuestas_dos">
        <item>Juanes</item>
        <item>Enrique Iglesias</item>
        <item>Daddy Yankee</item>
        <item>J Balvin</item>
        <item>Miguel Mateos</item>
        <item>Martina la Peligrosa</item>
    </string-array>
    
    <string name="menu_noticias">NOTICIAS</string>
    <string name="menu_mapa">MAPA</string>
    <string name="menu_agenda">AGENDA</string>
    <string name="menu_playlist">PLAYLIST</string>
    <string name="menu_color_moment">COLOR MOMENT</string>
    <string name="menu_cerrar_sesion">CERRAR SESIÓN</string>
    <string name="menu_acerca">ABOUT</string>

    <string name="rc_light">fonts/rc_light.ttf</string>
    <string name="rc_bold">fonts/rc_bold.ttf</string>
    <string name="yanone_light">fonts/yanone_light.ttf</string>

    <string name="text_close_session">Estas seguro que deseas cerrar sesión?</string>
    <string name="json_tag_nombre">nombre</string>

    <string name="loader_descarga">Descargando datos, por favor espere..</string>
    <string name="error_descarga">Existió un error al momento de descargar los datos..</string>
    <string name="error_parseo">Existió un error en nuestros servidores, intente nuevamente</string>
    <string name="loader_registro">Registrando, por favor espere..</string>
    <string name="loader_login">Iniciando sesión, por favor espere..</string>
    <string name="lorem_impsum_breve">Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore lore...</string>
    <string name="title_activity_maps">Map</string>

    <string name="API_KEY">AIzaSyAtO8YgqUBMKKNYVT0YFmB6H2yF8ashSus</string>

    <string name="cancion_escuchar">Selecciona la canción que más desees escuchar</string>
    <string name="cancion_escuchar_anuncio">Selecciona el cliente con el cual deseas reproducir tu música</string>

    <string name="stopify_anuncio">Spotify</string>

    <string name="activity_radio">Deezer Radios</string>
    <string name="activity_home">%1$s - Home</string>

    <!-- Widgets -->
    <string name="empty"></string>
    <string name="default_duration">0:00</string>
    <string name="login">Deezer Login</string>
    <string name="logout">Logout</string>
    <string name="visualizer_wf">Waveform</string>
    <string name="visualizer_fft">FFT</string>
    <string name="equalizer">Equalizer</string>
    <string name="unloggedRadios">Radios (without connection)</string>

    <!-- Playlist Options -->
    <string name="options">Options</string>
    <string name="none">None</string>
    <string name="fade_in_out">Fade in / Fade out</string>
    <string name="notification">Notification</string>

    <!-- Error messages -->
    <string name="no_results">No results found</string>
    <string name="deezer_error_during_login">Deezer error during login</string>
    <string name="deezer_too_many_skips">You have skipped too many tracks in this radio. Skip will be disabled for a while</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="login_cancelled">Login cancelled</string>
    <string name="ui_custom_track_list">This activity plays a custom list of tracks</string>
    <string name="ui_user_flow">This activity plays a custom list of tracks</string>
    <string name="bass">Bass Freqs.</string>
    <string name="treble">Treble Freqs.</string>

</resources>
