<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/splash_app">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:gravity="bottom"
        android:layout_height="fill_parent"
        >

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center|center_vertical"
            android:paddingBottom="15dp"
            android:paddingTop="10dp"
            android:textSize="25dp"
            android:textColor="@android:color/white"
            android:background="@drawable/red_line"
            android:text="@string/button_login" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center|center_vertical"
            android:textSize="25dp"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:layout_below="@+id/button_login"
            android:textColor="@android:color/white"
            android:background="@drawable/blue_line"
            android:text="@string/button_register" />

        <Button
            android:id="@+id/button_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:gravity="center|center_vertical"
            android:textSize="25dp"
            android:textColor="@android:color/white"
            android:layout_below="@id/button_register"
            android:background="@drawable/yellow_line"
            android:text="@string/button_facebook"/>

        <ProgressBar
            android:id="@+id/progress_usersession"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />
    </LinearLayout>


</RelativeLayout>