<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/splash_background">

    <EditText
        android:id="@+id/input_mail"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/input_text"
        android:textColor="#FFF"
        android:gravity="center"
        android:textColorHint="#FFF"
        android:hint="@string/input_emanil"
        android:layout_marginBottom="23dp"
        android:layout_above="@+id/check_terms"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/input_cel"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/input_text"
        android:hint="@string/input_cel"
        android:textColor="#FFF"
        android:gravity="center"
        android:textColorHint="#FFF"
        android:layout_above="@+id/input_mail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="28dp" />

    <LinearLayout
        android:id="@+id/wrapper_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/input_cel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    </LinearLayout>

    <Button
        android:id="@+id/button_register"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_registrar_app"
        android:textColor="#FFF"
        android:paddingTop="10dp"
        android:paddingBottom="15dp"
        android:gravity="center|center_vertical"
        android:textSize="25dp"
        android:layout_below="@+id/link_terms"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_register"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:id="@+id/check_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/link_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_terms_register"
        android:clickable="true"
        android:textSize="18sp"
        android:textColor="#a4acb7"
        android:gravity="center"
        android:layout_alignBottom="@+id/check_terms"
        android:layout_alignTop="@+id/check_terms"
        android:layout_toRightOf="@+id/check_terms"
        android:layout_alignRight="@+id/input_mail"
        android:layout_alignEnd="@+id/input_mail" />

</RelativeLayout>
